Fri Apr  1 18:52:47 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Changed announcing to not announce unregistered clients.
	  Affected file silcd/server.c.

	* Fixed username handling in command reply.  Affected file
	  silcd/command_reply.c.

Thu Mar 31 22:34:22 CEST 2005  Patrik Weiskircher <pat@icore.at>

	* Added new define SILC_MACOSX, if __APPLE__ and __MACH__ is defined.
          Affected file: includes/silcincludes.h.in

	* bool is defined as _Bool on Mac OS X now.
          Affected file: lib/silcutil/silctypes.h

Thu Mar 31 08:52:06 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added support for UTF-8 nicknames, channel names and
	  server names in client library.  Affected files in
	  lib/silcclient/.

	* Added __SILC_HAVE_PTHREAD, __SILC_HAVE_SIM, __SILC_HAVE_LIBIDN,
	  and __SILC_ENABLE_DEBUG to include/silcclient.h for third-party
	  software to check how Toolkit has been compiled.

Wed Mar 30 22:16:35 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_utf8_str[n]casecmp into lib/silcutil/silcutf8.[ch].

	* Use silc_utf8_str[n]casecmp instead of strcmp routines
	  in library and in SILC Client when dealing with nicknames
	  and other identifier strings.  Affected file in client lib
	  and irssi.

	* Convert nickname to UTF-8 in /msg and /smsg.  Affected file
	  irssi/src/silc/core/silc-servers.c.

Wed Mar 30 10:50:02 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Fixed idcache to work with the new identifier strings.
	  Affected file lib/silccore/silcidcache.c.

	* Added UTF-8 hash and compare function for SilcHashTable.
	  Affected file lib/silcutil/silcutil.[ch].

	* Added casefolding stringprep, SILC_CASEFOLD_PREP.
	  Affected file lib/silcutil/silcstringprep.[ch].

	* Changed the identifier string handling to include the original
	  format in client, server, channel entries and normalized
	  format in cache.  Affected files in silcd/.

Tue Mar 29 16:51:35 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
